<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FirebaseLogin</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed" tools:keep="@string/auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Reset password</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile" tools:keep="@string/title_activity_profile">Firebase</string>
    <string name="title_activity_login" tools:keep="@string/title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name" tools:keep="@string/hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not join yet? Please sign up now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password" tools:keep="@string/title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Type your registered email, we will send you password reset instructions.</string>
    <string name="pass_hint">Password</string>
    <string name="googleLogin">Login with Google</string>
    <string name="mail_empty">Email cannot be empty</string>
    <string name="reset_ok">Password reset OK</string>
    <string name="email_empty">Email can not be empty</string>
    <string name="password_empty">Password can not be empty</string>
</resources>
